--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -2234,7 +2234,7 @@ html {
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 80%
   }
   
   /* The Close Button */
@@ -2290,7 +2290,7 @@ html {
     background-color: rgb(179, 178, 178);
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
-    max-width: 900px;
+    width: 100%;
     max-height: 1000px;
     margin-left: auto;
     margin-right: auto;
@@ -2298,8 +2298,11 @@ html {
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-right: 20px
     }
-
+.small {
+  font-size: 12px ;
+}
   .margin24 {
    padding-top: 60px;
   } 
